--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,16 @@ gen-external-apklibs
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
+# Windows
+**/windows/flutter/generated_plugin_registrant.cc
+**/windows/flutter/generated_plugin_registrant.h
+**/windows/flutter/generated_plugins.cmake
+
+# Linux
+**/linux/flutter/generated_plugin_registrant.cc
+**/linux/flutter/generated_plugin_registrant.h
+**/linux/flutter/generated_plugins.cmake
+
 # NDK
 obj/
 
