--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,11 @@ lib/generated_plugin_registrant.dart
 .DS_Store
 .AppleDouble
 .LSOverride
+**/Flutter/ephemeral/
+**/Pods/
+**/macos/Flutter/GeneratedPluginRegistrant.swift
+**/macos/Flutter/ephemeral
+**/xcuserdata/
 
 # Icon must end with two \r
 Icon
