--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   firebase_auth: ^4.17.8
   badges: ^3.1.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
